docs/errors/examples/file-not-found-via-stdlib/file-not-found-via-stdlib.grob
// E5301 — file not found thrown by a stdlib call invoked directly from top level
// Eventual path: docs/errors/examples/file-not-found-via-stdlib/file-not-found-via-stdlib.grob
lines := fs.readLines(`C:\reports\summary.txt`)
print(lines.length)
